2022-05-10  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclassdoc-warn):
	New variable.
	(ebuild-mode-keywords-eclass-documentation): Move @DEAD and
	@DEPRECATED keywords to it.
	* ebuild-mode.el (ebuild-mode-font-lock-keywords): Use it.

2022-05-08  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el: Drop unknown package keyword "XML".
	(devbook-mode-menu): Quote lisp symbol in docstring.
	* gentoo-newsitem-mode.el (gentoo-newsitem-mode-menu): Ditto.
	* glep-mode.el (rst-classify-adornment, glep-mode-menu): Ditto.

2022-05-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.58 released.

	* glep-mode.el (glep-mode-insert-skeleton): Update URL in comment.

	* ebuild-mode.el (ebuild-mode-get-keywords): Restore trivial
	compatibility code, allowing continued support for XEmacs 21.4.
	This reverts the change of 2022-04-28.

	* ebuild-mode-keywords.el (ebuild-mode-keywords): Provide feature.
	* ebuild-mode.el (ebuild-mode-keywords): Require it.

	* ebuild-mode.el (ebuild-mode-collect-equal-cdrs): Evaluate with
	eval-when-compile instead of eval-and-compile.

2022-05-03  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh: Use ebuild-mode-keywords-eclass as a
	single variable for all eclass keywords.
	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.
	(ebuild-mode-keywords-eapi4, ebuild-mode-keywords-eapi5)
	(ebuild-mode-keywords-eapi6, ebuild-mode-keywords-eapi7)
	(ebuild-mode-keywords-functions-default): Remove variables.
	(ebuild-mode-keywords-0): Include their keywords here.
	(ebuild-mode-keywords-functions-eapi2)
	(ebuild-mode-keywords-functions-eapi4): Remove variables.
	(ebuild-mode-keywords-functions): Include their keywords here.
	* ebuild-mode.el (ebuild-mode-font-lock-keywords): List variables
	explicitly, instead of collecting their names from the obarray.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-0):
	Add EXPORT_FUNCTIONS which was missing.
