@@ -1,3 +1,8 @@
+2022-05-20  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode, ebuild-repo-mode-maybe-enable):
+	Protect against buffer-file-name being nil. Bug 846569.
+
 2022-05-10  Ulrich Müller  <ulm@gentoo.org>
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclassdoc-warn):
